added shortcuts in tmux.conf

--- a/others/tmux.conf
+++ b/others/tmux.conf
@@ -76,3 +76,7 @@ bind-key e switch-client -l
 #rescue a garbled pane
 unbind-key O
 bind-key O send-keys "!~/bin/sane.sh" C-m
+
+#uday settings
+bind -n S-Right next-window
+bind -n S-Left previous-window
