--- a/others/tmux.conf
+++ b/others/tmux.conf
@@ -81,3 +81,6 @@ bind-key O send-keys "!~/bin/sane.sh" C-m
 #uday settings
 bind -n S-Right next-window
 bind -n S-Left previous-window
+
+#uday - to eliminate delays on pressing Esc in vim/zsh/tmux
+set -s escape-time 0
