--- a/others/tmux.conf
+++ b/others/tmux.conf
@@ -1,5 +1,5 @@
-set -g prefix 'C-a'
-#set -g prefix `
+#set -g prefix 'C-a'
+set -g prefix `
 bind-key a send-prefix
 bind r source-file ~/.tmux.conf
 
