--- a/others/tmux.conf
+++ b/others/tmux.conf
@@ -84,3 +84,9 @@ bind -n S-Left previous-window
 
 #uday - to eliminate delays on pressing Esc in vim/zsh/tmux
 set -s escape-time 0
+
+# To browse my Txt files / Cheat sheets to get the commands
+unbind-key y
+bind-key y run "zsh -ci cmdsh" \; run "zsh -ci cmdsh2ndpart" \; load-buffer /tmp/tmuxbuffer/resultcmdsh \; paste-buffer
+
+
