Added vim-airline, tagbar plugins

--- a/others/tmux.conf
+++ b/others/tmux.conf
@@ -62,6 +62,7 @@ set-window-option -g xterm-keys on
 #bind-key ~ command-prompt -p "Pane Title" "exec ~/bin/pane_title.sh %%"
 
 set-option -g default-shell /bin/zsh
+set -g default-terminal "screen-256color"
 
 unbind-key !
 bind-key ! break-pane -d
