Changes as on 9 Mar 17

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -26,7 +26,8 @@ bind-key -t vi-copy 'C-v' rectangle-toggle
 set-option -g history-limit 10000
 
 #last windows
-bind-key 'C-a' last-window
+#bind-key 'C-a' last-window
+bind-key ` last-window
 
 #rename window
 bind-key A command-prompt 'rename-window %%'
