Changes as on 13 Apr 2017

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -79,7 +79,7 @@ bind-key e switch-client -l
 unbind-key O
 bind-key O send-keys "!~/bin/sane.sh" C-m
 
-#uday settings
+#uday settings - SHIFT-right/left arrow to navigate tmux windows
 bind -n S-Right next-window
 bind -n S-Left previous-window
 
