Changes to tmux configs - fzf tmux related

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -88,6 +88,6 @@ set -s escape-time 0
 
 # To browse my Txt files / Cheat sheets to get the commands
 unbind-key y
-bind-key y run "zsh -ci cmdsh" \; run "zsh -ci cmdsh2ndpart" \; load-buffer /tmp/tmuxbuffer/resultcmdsh \; paste-buffer
+bind-key y run "zsh -ci cmdsh" \; run "zsh -ci cmdsh2ndpart" \; load-buffer ~/tmuxbuffer/resultcmdsh \; paste-buffer
 
 
