--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -90,4 +90,15 @@ set -s escape-time 0
 unbind-key y
 bind-key y run "zsh -ci cmdsh" \; run "zsh -ci cmdsh2ndpart" \; load-buffer ~/tmuxbuffer/resultcmdsh \; paste-buffer
 
+#uday - tmux mouse operations
+# Make mouse useful in copy mode
+ setw -g mode-mouse on
 
+# Allow mouse to select which pane to use
+ set -g mouse-select-pane on
+
+# Allow mouse dragging to resize panes
+ set -g mouse-resize-pane on
+
+# Allow mouse to select windows
+ set -g mouse-select-window on
