--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -18,9 +18,13 @@ bind-key l select-pane -R
 set-window-option -g mode-keys vi
 
 # start and end selection
-bind-key -t vi-copy 'v' begin-selection
-bind-key -t vi-copy 'y' copy-selection
-bind-key -t vi-copy 'C-v' rectangle-toggle
+bind -Tcopy-mode-vi v send -X begin-selection
+bind -Tcopy-mode-vi y send -X copy-selection
+bind -Tcopy-mode-vi C-v send -X rectangle-toggle
+#BELOW COMMANDS ARE FOR OLD tmux VERSIONS. Can be removed after sometime
+#bind-key -t vi-copy 'v' begin-selection
+#bind-key -t vi-copy 'y' copy-selection
+#bind-key -t vi-copy 'C-v' rectangle-toggle
 
 #history
 set-option -g history-limit 10000
@@ -91,14 +95,14 @@ unbind-key y
 bind-key y run "zsh -ci cmdsh" \; run "zsh -ci cmdsh2ndpart" \; load-buffer ~/tmuxbuffer/resultcmdsh \; paste-buffer
 
 #uday - tmux mouse operations
+set-option -g mouse on
+
+#BELOW COMMANDS ARE FOR OLD tmux VERSIONS. Can be removed after sometime
 # Make mouse useful in copy mode
- setw -g mode-mouse on
-
+# setw -g mode-mouse on
 # Allow mouse to select which pane to use
- set -g mouse-select-pane on
-
+# set -g mouse-select-pane on
 # Allow mouse dragging to resize panes
- set -g mouse-resize-pane on
-
+# set -g mouse-resize-pane on
 # Allow mouse to select windows
- set -g mouse-select-window on
+# set -g mouse-select-window on
