--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -40,8 +40,8 @@ bind-key A command-prompt 'rename-window %%'
 bind-key > save-buffer ~/.tmux-buffer \; run-shell "xsel -i -b <~/.tmux-buffer && rm ~/.tmux-buffer"
 
 #logging
-bind-key I pipe-pane "exec cat >>$HOME/tmuxlogs/'#I-#P-#W.log'" \; display-message 'Started logging to #P-#I-#W.log'
-bind-key i pipe-pane \; display-message 'Ended logging to #I-#P-#W.log'
+bind-key K pipe-pane "exec cat >>$HOME/tmuxlogs/'#I-#P-#W.log'" \; display-message 'Started logging to #P-#I-#W.log'
+bind-key k pipe-pane \; display-message 'Ended logging to #I-#P-#W.log'
 
 #word-separators
 set-window-option -g word-separators ' @"=:;,.()[]{}'
@@ -106,3 +106,20 @@ set-option -g mouse on
 # set -g mouse-resize-pane on
 # Allow mouse to select windows
 # set -g mouse-select-window on
+
+#UDAY tmux Plugin Manager
+#https://github.com/tmux-plugins/tpm
+# List of plugins
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+
+# Other plugins:
+#To restore tmux after reboot
+#https://github.com/tmux-plugins/tmux-resurrect
+#https://github.com/tmux-plugins/tmux-continuum
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @plugin 'tmux-plugins/tmux-continuum'
+set -g @continuum-restore 'on'
+
+#****** Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)*****
+run '~/.tmux/plugins/tpm/tpm'
