tmux restoring related comments

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -114,7 +114,7 @@ set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 
 # Other plugins:
-#To restore tmux after reboot
+#To restore tmux after reboot - just type tmux on the shell after reboot, it will automatically restore the tmux sessions
 #https://github.com/tmux-plugins/tmux-resurrect
 #https://github.com/tmux-plugins/tmux-continuum
 set -g @plugin 'tmux-plugins/tmux-resurrect'
