--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -43,6 +43,10 @@ bind-key > save-buffer ~/.tmux-buffer \; run-shell "xsel -i -b <~/.tmux-buffer &
 bind-key K pipe-pane "exec cat >>$HOME/tmuxlogs/'#I-#P-#W.log'" \; display-message 'Started logging to #P-#I-#W.log'
 bind-key k pipe-pane \; display-message 'Ended logging to #I-#P-#W.log'
 
+#to make the HOME and END key work in neovim
+bind-key -n Home send Escape "OH"
+bind-key -n End send Escape "OF"
+
 #word-separators
 set-window-option -g word-separators ' @"=:;,.()[]{}'
 set-window-option -ag word-separators "'"
@@ -114,7 +118,7 @@ set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 
 # Other plugins:
-#To restore tmux after reboot - just type tmux on the shell after reboot, it will automatically restore the tmux sessions
+#To restore tmux after reboot/restart - just type tmux on the shell after reboot/restart, it will automatically restore the tmux sessions
 #https://github.com/tmux-plugins/tmux-resurrect
 #https://github.com/tmux-plugins/tmux-continuum
 set -g @plugin 'tmux-plugins/tmux-resurrect'
