--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -51,15 +51,13 @@ bind-key -n End send Escape "OF"
 set-window-option -g word-separators ' @"=:;,.()[]{}'
 set-window-option -ag word-separators "'"
 
-#colors
-set-window-option -g window-status-fg cyan #base0
-set-window-option -g window-status-bg colour236
-set-window-option -g window-status-attr dim
+# Colors
+set-option -g window-status-style fg=cyan,bg=colour236,dim
+set-option -g window-status-current-style fg=red,bg=colour236,bright
 
-set-window-option -g window-status-current-fg red #orange
-set-window-option -g window-status-current-bg colour236
-set-window-option -g window-status-current-attr bright
-set-window-option -g xterm-keys on
+# Enable xterm-keys
+set-option -g xterm-keys on
+
 
 #continuum
 #run-shell /home/lnara002/software/tmux/plugins/tmux-resurrect/resurrect.tmux
